welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:6: error: Invalid literal number
		for (k <- 1to h) {
                          ^ColumnByColumn:11: error: ')' expected but '}' found.
	}
        ^